--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/arm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "compile:helpers": "tsc --project scripts/tsconfig.json",
+    "build": "tsc && node bin/package.js",
     "lint": "tslint lib/*.ts -t verbose"
   },
   "keywords": [
@@ -27,6 +28,7 @@
     "@types/sprintf-js": "^1.1.1",
     "@types/winston": "^2.4.4",
     "install": "^0.12.2",
+    "tar": "^4.4.10",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.6"
