Added assets to be uploaded
Signed-off-by: Russell Seymour <russell.seymour@turtlesystems.co.uk>

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -72,3 +72,5 @@ stages:
                 target: $(Build.SourceVersion)
                 tagSource: auto
                 tag: $(Build.BuildNumber)
+                assets:
+                - $(Build.ArtifactStagingDirectory)/*.tar.gz
