Updated pipeline to use different upload task
Signed-off-by: Russell Seymour <russell.seymour@turtlesystems.co.uk>

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -45,11 +45,17 @@ stages:
         replaceExistingArchive: true
 
     # Publish the artifacts
-    - task: PublishBuildArtifacts@1
+    # - task: PublishBuildArtifacts@1
+    #  displayName: Publish Artifacts
+    #  inputs:
+    #    PathtoPublish: $(Build.ArtifactStagingDirectory)
+    #    ArtifactName: build
+
+    - task: PublishPipelineArtifact@1
       displayName: Publish Artifacts
       inputs:
-        PathtoPublish: $(Build.ArtifactStagingDirectory)
-        ArtifactName: build
+        targetPath: $(Build.ArtifactStagingDirectory)
+        artifact: 'build'
 
 - stage: Deploy
   displayName: GitHub Release
