--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
       "module": "commonjs",
       "target": "es6",
-      "outDir": "./dist",
+      "outDir": "./build/working/lib",
       "sourceMap": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
